<resources>
    <!-- Action bar labels -->
    <string name="label_home">DressMe</string>
    <string name="label_profile_main">ProfileMainActivity</string>
    <string name="label_settings">Settings</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Register or sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username.</string>
    <string name="invalid_password">Password must be longer than 5 characters.</string>
    <string name="login_failed">"Login failed :("</string>

    <!-- Action bar titles -->
    <string name="title_home">Home</string>
    <string name="title_add">Add</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>

    <!-- Temporary strings (testing) TODO remove -->
    <string name="test_user">Ciara Delavigne</string>

    <!-- Signup page -->
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="create_account">Create Account</string>
    <string name="already_member">Already a member? Login here</string>

    <!-- Other -->
    <string name="item_image">Image of the item</string>
    <string name="size_condition">Size - condition</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="product_description">Description</string>
    <string name="buy_now">Buy now</string>
    <string name="contact_seller">Contact seller</string>
    <string name="back">BACK</string>
    <string name="button_logout">LOGOUT</string>
    <string name="session_explanation_personalize" />
    <string name="fragment_session_personalize">Customize your news feed. \\n Select your favorite brands and sellers now!</string>
    <string name="button_customize">CUSTOMIZE</string>

</resources>
