<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InspectItemActivity">

    <Button
        android:id="@+id/inspect_buyNow_button"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:text="@string/buy_now"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspect_contactSeller_button" />

    <ImageView
        android:id="@+id/inspect_item_imageView"
        android:layout_width="412dp"
        android:layout_height="402dp"
        android:layout_marginBottom="364dp"
        android:contentDescription="@string/item_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/item_view_image_01" />

    <TextView
        android:id="@+id/inspect_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/product_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/inspect_info_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/size_condition"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspect_name_textView" />

    <TextView
        android:id="@+id/inspect_price_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/price"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspect_info_textView" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginTop="428dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspect_price_textView" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/product_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/inspect_contactSeller_button"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/contact_seller"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_centerHorizontal="true"
        android:text="@string/test_user"
        android:gravity="left|center_vertical"
        android:paddingLeft="25dp"
        android:drawableLeft="@drawable/ic_account_32dp"
        android:drawableRight="@drawable/ic_arrow_right"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspect_item_imageView" />

    <Button
        android:id="@+id/inspect_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="40dp"
        android:layout_height="323dp"
        android:layout_marginStart="328dp"
        android:layout_marginTop="10dp"
        android:alpha="0.30"
        android:drawableLeft="@drawable/ic_arrow_right"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="40dp"
        android:layout_height="323dp"
        android:layout_marginTop="10dp"
        android:alpha="0.30"
        android:drawableLeft="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


